hard-gists/8be20f6256f9fd474c05/run.log
=== Docker Run Log for 8be20f6256f9fd474c05 ===
Started at: Mi 29. Okt 18:08:22 CET 2025

[2025-10-29 18:08:22] START: Running container for 8be20f6256f9fd474c05
[2025-10-29 18:08:23] SUCCESS: Container e2520c95c916272dd2eeb79b51cd3b19110d1c3fa706c75135dc4b90617a883a started for 8be20f6256f9fd474c05
=== Container logs for 8be20f6256f9fd474c05 ===
  File "/snippet.py", line 211
    print 'Oops, I died: {}\n'.format(str(e))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8be20f6256f9fd474c05 ===
[2025-10-29 18:08:25] INFO: Container e2520c95c916272dd2eeb79b51cd3b19110d1c3fa706c75135dc4b90617a883a has stopped
